<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">AndroidWarrior</string>
    <string name="upload_key_label">Upload Key</string>
    <string name="url_label">URL:</string>
    <string name="associated_file_label">Associated File:</string>
    <string name="change_label">Change</string>
    <string name="cancel_label">Cancel</string>
    <string name="save_label">Save</string>
    <string name="settings_label">Settings</string>
    <string name="upload_button_description">Upload key</string>
    <string name="add_mobile_key_description">Add Mobile Key</string>
    <string name="username_label">Username:</string>
</resources>
